bug: 18789 Force the no icon button has the same height as the with-icon buttons in the advanced search toolbar. (Here, RemoveAll button). So the alignment is even.
http://bugzilla.zimbra.com/show_bug.cgi?id=18789

Copied from Perforce
 Change: 65928

--- a/WebRoot/css/zmadmin.css
+++ b/WebRoot/css/zmadmin.css
@@ -626,7 +626,8 @@
 }
 
 /* Set the height of the advanced search button arbitrary */
-div.ZaAdvancedSearchButton table {
+div.ZaAdvancedSearchButton table, 
+div.ZaSearchBuilderOptionRemoveAll table  {
 	height: 22px ;	
 #IFDEF MSIE
 	height: 20px ;
